--- a/Aboumeページ.html
+++ b/Aboumeページ.html
@@ -91,7 +91,7 @@ a#SNS{
 </header>
 <nav>
     <ul>
-      <li><a href="WebSite.html">Diary</a></li>
+      <li><a href="index.html">Diary</a></li>
       <li><a href="Aboumeページ.html">About me</a></li>
       <li><a href="SNS.html">SNS</a></li>
       <li><a href="WIP.html">WIP</a></li>
