--- a/SNS.html
+++ b/SNS.html
@@ -81,7 +81,7 @@ a {
 </header>
 <nav>
     <ul>
-      <li><a href="WebSite.html">Diary</a></li>
+      <li><a href="index.html">Diary</a></li>
       <li><a href="Aboumeページ.html">About me</a></li>
       <li><a href="SNS.html">SNS</a></li>
       <li><a href="WIP.html">WIP</a></li>
