--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@ a {
   margin-right: 35px;
   text-align: center*
  }
-resizeimage img { width: 100%; }
+ img { 
+  width: 100%; 
+  height:auto
+}
 </style>
 </head>
 <body>
