--- a/Aboumeページ.html
+++ b/Aboumeページ.html
@@ -118,7 +118,7 @@ a#SNS{
         見て行ってください、多少なりとも有益な情報があるはずです。
       </p>
     </div>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7cEhhPVEAmlhZ6RRgYZg9s?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12" src="https://open.spotify.com/embed/playlist/7cEhhPVEAmlhZ6RRgYZg9s?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <div class="right">
       <p class="title">Spotify</p>
       <p class="text">私はサカナクションが大好きなんですよ、学生なのであまりライブなどに行くお金はあいにく持ち合わせておりませんが...よかったら聞いてみて下さい。
